Fixed page scrolling overwriting slider changes on mobile.

--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -1,3 +1,8 @@
+*
+{
+    overscroll-behavior: contain; /* Prevent scrolling the entire page when reaching the top or bottom of a scrollable element. */
+}
+
 .html, body
 {
 	height: 100%;
